@@ -120,13 +120,13 @@ public class TestDenseMatrix extends TestCase {
   }
   
   public void testGetSetAttribute() throws IOException {
-    m1.setRowAttribute(0, "row1");
-    assertEquals(m1.getRowAttribute(0), "row1");
-    assertEquals(m1.getRowAttribute(1), null);
+    m1.setRowLabel(0, "row1");
+    assertEquals(m1.getRowLabel(0), "row1");
+    assertEquals(m1.getRowLabel(1), null);
 
-    m1.setColumnAttribute(0, "column1");
-    assertEquals(m1.getColumnAttribute(0), "column1");
-    assertEquals(m1.getColumnAttribute(1), null);
+    m1.setColumnLabel(0, "column1");
+    assertEquals(m1.getColumnLabel(0), "column1");
+    assertEquals(m1.getColumnLabel(1), null);
   }
 
   public void testSubMatrix() throws IOException {
